--- a/ChittrAssignment/package.json
+++ b/ChittrAssignment/package.json
@@ -10,8 +10,20 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@primer/octicons-react": "^9.6.0",
+    "native-base": "^2.13.8",
+    "octicons": "^8.5.0",
     "react": "16.9.0",
-    "react-native": "0.61.5"
+    "react-native": "0.61.5",
+    "react-native-gesture-handler": "^1.6.0",
+    "react-native-reanimated": "^1.7.0",
+    "react-native-screens": "^2.2.0",
+    "react-native-search-filter": "^0.1.5",
+    "react-native-vector-icons": "^6.6.0",
+    "react-navigation": "^4.2.2",
+    "react-navigation-drawer": "^2.4.2",
+    "react-navigation-stack": "^1.10.3",
+    "react-navigation-tabs": "^2.8.2"
   },
   "devDependencies": {
     "@babel/core": "7.8.7",
