--- a/ChittrAssignment/android/app/src/main/AndroidManifest.xml
+++ b/ChittrAssignment/android/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
       android:roundIcon="@mipmap/ic_launcher_round"
       android:allowBackup="false"
       android:theme="@style/AppTheme">
+      <meta-data
+      android:name="com.google.android.geo.API_KEY"
+      android:value="AIzaSyAMl0FWy0ueuPpU6PHDak5wm4i0G4h9ROY"/>
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
