--- a/ChittrAssignment/package.json
+++ b/ChittrAssignment/package.json
@@ -17,6 +17,7 @@
     "react-native": "0.61.5",
     "react-native-gesture-handler": "^1.6.0",
     "react-native-link": "^4.1.0",
+    "react-native-maps": "^0.25.0",
     "react-native-reanimated": "^1.7.0",
     "react-native-screens": "^2.2.0",
     "react-native-search-filter": "^0.1.5",
