--- a/ChittrAssignment/android/app/src/main/AndroidManifest.xml
+++ b/ChittrAssignment/android/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
   package="com.chittrassignment">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
 
     <application
       android:name=".MainApplication"
@@ -10,9 +11,11 @@
       android:roundIcon="@mipmap/ic_launcher_round"
       android:allowBackup="false"
       android:theme="@style/AppTheme">
+
       <meta-data
       android:name="com.google.android.geo.API_KEY"
-      android:value="AIzaSyAMl0FWy0ueuPpU6PHDak5wm4i0G4h9ROY"/>
+      android:value="AIzaSyAILeBhAYUrtLA2Yp9Mad_WboZPGQWqP_w"/>
+
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
@@ -24,6 +27,9 @@
         </intent-filter>
       </activity>
       <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" />
-    </application>
 
+<meta-data
+      android:name="com.google.android.geo.API_KEY"
+      android:value="AIzaSyAILeBhAYUrtLA2Yp9Mad_WboZPGQWqP_w"/>
+    </application>
 </manifest>
